2000-07-07  Greg McGary  <greg@mcgary.org>

	* sysdeps/unix/make-syscalls.sh: Tolerate syscalls that
	have no names without leading underscores.

2000-07-07  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/sjis.c (from_ucs4_lat1): Fix mappng of U005C and
	U007E.

	* stdio-common/Makefile (tests): Remove tst-printf here...
	(tests-srcs): ...and add it here.
	(distribute): Add tst-unbputc.sh and tst-printf.sh.
	Add rules to run tst-printf.sh.
	* stdio-common/tst-printf.c: Move code around so that there is really
	no further output where it's stated.
	* stdio-common/tst-printf.sh: New file.

2000-07-07  Mark Kettenis  <kettenis@gnu.org>

	* hurd/vpprintf.c [USE_IN_LIBIO]: Include <libioP.h>.
	(do_write): Renamed from pwrite.
	(vpprintf) [USE_IN_LIBIO]: Adjust for renaming and reshufling of
	`struct _IO_cookie_file'.

2000-07-07  Ulrich Drepper  <drepper@redhat.com>

	* malloc/mtrace.pl: Exit with exit code 1 if any leak was
	detected.
	* malloc/tst-mtrace.sh: Run mtrace script.

2000-07-07  Greg McGary  <greg@mcgary.org>

	* posix/regex.c (EXTEND_BUFFER): Compute increment once.
	Move all three components of a bounded pointer.

2000-07-07  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/locale.c (write_locales): Don't simply add all
	directories found in the subdir, test whether at least the
	LC_CTYPE file is in there.

2000-07-06  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/euc-jp.c: Map characters in C1 area to itself.
	* iconvdata/euc-kr.c: Likewise.

	* stdio-common/vfprintf.c (process_string_arg): Check result of
	wcrtomb call and bail out if it failed.

	* malloc/Makefile (test-srcs): Add tst-mtrace.
	(distribute): Add tst-mtrace.sh.
	Add rule to run tst-mtrace.sh.
	* malloc/tst-mtrace.c: New file.
	* malloc/tst-mtrace.sh: New file.

	* include/signal.h: Declare __libc_sigaction.
	* sysdeps/unix/sysv/linux/Versions: Export __libc_sigaction.
	* sysdeps/unix/sysv/linux/sigaction.c: Add __libc_sigaction alias.